src/components/css/blog.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200&display=swap');


:root{
    --main-font-poppins345: 'Poppins', sans-serif;
    --main-color: hsla(32, 100%, 45%, 1);
    --text-color: hsla(0, 0%, 99%, 0.9);
    --DefaultColor: hsla(173, 96%, 100%, 0.9);

    --menu-color: hsla(173, 96%, 100%, 0.9);


    --darkbackground: #22272e;
    --text-white: hsla(0, 0%, 99%, 0.9);
    --whitebackground: hsla(0, 0%, 99%, 0.9);

    --footerbg: rgba(223, 220, 220, 0.52);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    
}

.blog__container{

    margin: 0;
    word-wrap: break-word;
    width: 35rem;
    padding: 5rem 2em;
    max-height: 100%;

}


.blog__header{
    display: flex;
    justify-content: space-between;
    margin-bottom: 2rem;
}

.blog__header a{
    
    text-decoration: none;
    cursor: pointer;
    font-size: 0.8rem;
    color: var(--text-white);
}

.blog__header a:hover{
    
    color: var(--main-color);
}

.blog__title{

    font-weight: 500;
    font-size: 1rem;
}

.blog__father__container{

    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.blogs{
    margin-bottom: 2rem;
    width: 100%;
}

.blogs h2{

    cursor: pointer;
    font-family: 'Outfit', sans-serif;
    font-size: 1.6rem;
}

.blogs h2:hover{

    color: var(--main-color);
}

.blogs p{
    font-size: 1rem;
    font-weight: 300;
}

.blogs .date{

    color: var(--footerbg);
    font-size: 0.9rem;
}

.blog__wifi{
    transform: rotate(20deg);
}

@media screen and (max-width: 995px){

    
    .blog__container{

        padding: 0 2em;
        width: 100%;

    }

    
}

